--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,25 +4,52 @@
         <h3>About QGIS User Conference</h3>
         <p>
 
+The QGIS User Conference is an annual event that brings together users and developers of the QGIS open-source geographic information system (GIS) software. The conference provides an opportunity for attendees to learn about the latest developments in QGIS, share their experiences with others, and network with other QGIS users and developers. The conference attracts atendees from a broad spectrum of organizations and industries.
+</p><p>
+This year, the conference is being held on <b>9-10 September 2024</b> in <b>Bratislava, Slovakia</b>.
+</p><p>
+The conference includes a variety of presentations, workshops, and discussions on a wide range of QGIS topics.
+Presentations cover topics such as:
+<ul>
+<li> Interesting use cases of QGIS
+    <li> Advanced workflows with QGIS
+    <li> Deep dives into new QGIS features
+    <li> QGIS ecosystem (third party plugins, server solutions, mobile apps)
+    <li> Using QGIS for specific applications
+    <li> Integration of QGIS with other geospatial products
+    <li> Future plans for QGIS project
+</ul>
+Workshops provide hands-on experience with specific QGIS tools and techniques - both for beginners and advanced users.
+</p><p>
+The program for this year has not yet been set, but you can find some examples of what to expect at the <a href="https://uc2023.qgis.nl/">QGIS User Conference 2023 website</a>.
+</p>
 
+<p>
+Right after the conference, <b>QGIS Contributor Meeting</b> will take place on <b>11-13 September</b> at the same venue. This event is for those who contribute to the development of QGIS. It's free to join but you are expected to make yourself useful on improving the QGIS application, documentation or website or do anything else QGIS will benefit from.
 
-The QGIS User Conference '24 is an international 2-day in person event on September 2024 in Slovakia. The user conference brings together QGIS users and developers from a broad spectrum of organizations and industries.
-</p><p>
-Through two days of workshops, presentations and discussions, conference participants learn and share knowledge about QGIS and other related geospatial products.
-</p><p>
-The program has not yet been set, but you can find some examples of what to expect at the <a href="https://uc2023.qgis.nl/">QGIS User Conference 2023 website</a>.
-</p><p>
-Please apply to become a speaker if you have anything to share!
+<!--
+<a href="https://github.com/qgis/QGIS/wiki/27th%E2%80%90Contributor%E2%80%90Meeting%E2%80%90in%E2%80%90Bratislava"></a>-->
+
+</p>
+<h3>Call for Papers</h3>
+<p>
+    We will be collecting submissions for presentations and workshops <b>until the end of March 2024</b>. The call for papers will be announced soon - stay tuned!
 </p>
 <p>
-TODO: add info about contributor meeting
+    Please apply to become a speaker if you have anything to share!
 </p>
+
+<h3>Tickets</h3>
 <p>
-TODO: add call for papers
+    Registration for the event will start in <b>April 2024</b>.
 </p>
+
+
+    <!--
             <div>
             <a href="{% link _pages/about.md %}" class="btn btn-primary waves-effect waves-button waves-light waves-float">More</a>
         </div>
+    -->
 
     </div>
 </section>
