--- a/_sass/partials/_location-map.scss
+++ b/_sass/partials/_location-map.scss
@@ -1,7 +1,7 @@
 .location-map {
     font-weight: $light;
-    padding: 172px 0;
-    height: 700px;
+    //padding: 172px 0;
+    height: 500px;
     h3 {
         margin-bottom: 0;
     }
@@ -29,11 +29,6 @@
     }
 }
 .canvas-map {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     width: 100%;
-    height: 700px;
+    height: 500px;
 }
