--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,33 +4,34 @@
         <h3>About QGIS User Conference</h3>
         <p>
 
-The QGIS User Conference is an annual event that brings together users and developers of the QGIS open-source geographic information system (GIS) software. The conference provides an opportunity for attendees to learn about the latest developments in QGIS, share their experiences with others, and network with other QGIS users and developers. The conference attracts atendees from a broad spectrum of organizations and industries.
+The QGIS User Conference is an annual event that brings together users and developers of the QGIS open-source geographic information system (GIS) software.</p><p>The conference provides an opportunity for attendees to learn about the latest developments in QGIS, share their experiences with others, and network with other QGIS users and developers. The conference attracts atendees from a broad spectrum of organizations and industries.
 </p><p>
 This year, the conference is being held on <b>9-10 September 2024</b> in <b>Bratislava, Slovakia</b>.
-</p><p>
-The conference includes a variety of presentations, workshops, and discussions on a wide range of QGIS topics.
-Presentations cover topics such as:
-<ul>
-<li> Interesting use cases of QGIS
-    <li> Advanced workflows with QGIS
-    <li> Deep dives into new QGIS features
-    <li> QGIS ecosystem (third party plugins, server solutions, mobile apps)
-    <li> Using QGIS for specific applications
-    <li> Integration of QGIS with other geospatial products
-    <li> Future plans for QGIS project
-</ul>
-Workshops provide hands-on experience with specific QGIS tools and techniques - both for beginners and advanced users.
-</p><p>
-The program for this year has not yet been set, but you can find some examples of what to expect at the <a href="https://uc2023.qgis.nl/">QGIS User Conference 2023 website</a>.
 </p>
 
+<div>
+    <a href="{% link _pages/about.md %}" class="btn btn-primary waves-effect waves-button waves-light waves-float">Learn More</a>
+</div>
+
+<br>
+
 <p>
-Right after the conference, <b>QGIS Contributor Meeting</b> will take place on <b>11-13 September</b> at the same venue. This event is for those who contribute to the development of QGIS. It's free to join but you are expected to make yourself useful on improving the QGIS application, documentation or website or do anything else QGIS will benefit from.
+A look back at the <a href="https://uc2023.qgis.nl/">QGIS User Conference 2023</a> hosted in Den Bosch, Netherlands:
+</p>
+
+<p align="center">
+    <img src="{{ site.baseurl }}/img/2023/DSC_0386.JPG" width="300" style="padding-bottom: 5px">
+    <img src="{{ site.baseurl }}/img/2023/DSC_0515.JPG" width="300" style="padding-bottom: 5px">
+    <img src="{{ site.baseurl }}/img/2023/DSC_0217.JPG" width="300" style="padding-bottom: 5px">
+    <img src="{{ site.baseurl }}/img/2023/DSC_0586.JPG" width="300" style="padding-bottom: 5px">
+</p>
+
 
 <!--
 <a href="https://github.com/qgis/QGIS/wiki/27th%E2%80%90Contributor%E2%80%90Meeting%E2%80%90in%E2%80%90Bratislava"></a>-->
 
 </p>
+
 <h3>Call for Papers</h3>
 <p>
     We will be collecting submissions for presentations and workshops <b>until the end of March 2024</b>. The call for papers will be announced soon - stay tuned!
@@ -46,9 +47,6 @@ Right after the conference, <b>QGIS Contributor Meeting</b> will take place on <
 
 
     <!--
-            <div>
-            <a href="{% link _pages/about.md %}" class="btn btn-primary waves-effect waves-button waves-light waves-float">More</a>
-        </div>
     -->
 
     </div>
