--- a/_includes/team-member.html
+++ b/_includes/team-member.html
@@ -1,4 +1,4 @@
-<div class="effect-wrapper col-md-4 col-sm-6 col-xs-12 cols-centered appear-animation">
+<div class="effect-wrapper col-md-4 col-sm-6 col-xs-12 cols-centered">
     <div class="zoe-effect" data-toggle="modal" data-target="#speakerDetail-{{ include.teamMember.id }}">
         <figure class="waves-effect waves-block waves-light"
             style="background-image: url('{{ site.baseurl | append: '/img/people/' | append: include.teamMember.thumbnailUrl }}')">
