--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,13 +36,12 @@
 	</div>
 	<div class="row">
 		<!-- Please don't delete this line-->
-		<div class="col-md-6">
+		<div class="">
 			<p class="copyright">
-				&copy; 2014 Based on <a href="https://github.com/gdg-x/zeppelin" target="_blank">Project Zeppelin</a>.
-				Designed and created by <a href="https://github.com/ozasadnyy" target="_blank">Oleh Zasadnyy</a>
-				&middot;
-				</p><p class="copyright">
-				&copy; QGIS User Conference 2024 Bratislava
+				&copy; QGIS User Conference 2024 Bratislava &middot;
+				Web based on <a href="https://github.com/gdg-x/zeppelin" target="_blank">Project Zeppelin</a>
+				 by <a href="https://github.com/ozasadnyy" target="_blank">Oleh Zasadnyy</a> &middot;
+				 Hero image by <a href="https://commons.wikimedia.org/wiki/File:Bratislava_Panorama_R01.jpg">Marc Ryckaert</a>
 			</p>
 		</div>
 	</div>
