--- a/_includes/location-map.html
+++ b/_includes/location-map.html
@@ -7,7 +7,7 @@
 
         <div class="row" >
           <div class="col-sm-push-1 col-xs-push-7 animated hiding location-description text-left" data-animation="fadeInLeft" data-delay="0">
-            <h4>Faculty of Civil Engineering STU</h4> <ul> <li>Radlinskeho 11</li> <li>Bratislava</li> <li>Slovakia</li> </ul> <a href="https://www.openstreetmap.org/directions?from=&to=48.152044,17.115374" target="_blank"> Directions <svg class="icon-direction" viewBox="0 0 32 32"> <use xlink:href="/img/sprites/sprites.svg#icon-direction"></use> </svg> </a>
+            <h4>Faculty of Civil Engineering STU</h4> <!--<ul> <li>Radlinskeho 11</li> <li>Bratislava</li> <li>Slovakia</li> </ul> <a href="https://www.openstreetmap.org/directions?from=&to=48.152044,17.115374" target="_blank"> Directions <svg class="icon-direction" viewBox="0 0 32 32"> <use xlink:href="/img/sprites/sprites.svg#icon-direction"></use> </svg> </a>-->
           </div>
         </div>
       </div>
@@ -20,7 +20,7 @@
 
 
 const map = L.map('map').setView([48.152044, 17.115374], 6);
-L.marker([48.152044, 17.115374]).addTo(map).bindPopup('<div class="location-map-popup"> <div class="logo logo-dark"></div> <p>Faculty of Civil Engineering STU</p> <ul> <li>Radlinskeho 11</li> <li>Bratislava</li> <li>Slovakia</li> </ul> <a href="https://www.openstreetmap.org/directions?from=&to=48.152044,17.115374" target="_blank"> Directions <svg class="icon-direction" viewBox="0 0 32 32"> <use xlink:href="/img/sprites/sprites.svg#icon-direction"></use> </svg> </a> </div> ');
+L.marker([48.152044, 17.115374]).addTo(map).bindPopup('<div class="location-map-popup"> <div class="logo logo-dark"></div> <p>Faculty of Civil Engineering STU</p> <!--<ul> <li>Radlinskeho 11</li> <li>Bratislava</li> <li>Slovakia</li> </ul> <a href="https://www.openstreetmap.org/directions?from=&to=48.152044,17.115374" target="_blank"> Directions <svg class="icon-direction" viewBox="0 0 32 32"> <use xlink:href="/img/sprites/sprites.svg#icon-direction"></use> </svg> </a>--> </div> ');
 map.scrollWheelZoom.disable();
 
 const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom: 19, attribution: '&copy; ' + '<a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>' }).addTo(map);
