--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,14 +2,19 @@
 <section id="about" class="about">
     <div class="container">
         <h3>About QGIS User Conference</h3>
-        <p>
 
-The QGIS User Conference is an annual event that brings together users and developers of the QGIS open-source geographic information system (GIS) software.</p><p>The conference provides an opportunity for attendees to learn about the latest developments in QGIS, share their experiences with others, and network with other QGIS users and developers. The conference attracts atendees from a broad spectrum of organizations and industries.
+            <div class="row">
+                <div class="col-lg-9">
+                    <p>
+The QGIS User Conference is an annual event that brings together users and developers of the QGIS open-source geographic information system (GIS) software. The conference provides an opportunity for attendees to learn about the latest developments in QGIS, share their experiences with others, and network with other QGIS users and developers. The conference attracts atendees from a broad spectrum of organizations and industries.
 </p><p>
 This year, the conference is being held on <b>9-10 September 2024</b> in <b>Bratislava, Slovakia</b>.
 </p>
+<p>
+Right after the conference, 27th QGIS <b>Contributor Meeting</b> will be held at the same venue on <b>11-13 September</b>. Contributor meetings bring together active members of the QGIS project to plan their work, hold face-to-face discussions and brainstorm new ideas.
+</p>
 
-<div>
+<div align="center">
     <a href="{% link _pages/about.md %}" class="btn btn-primary waves-effect waves-button waves-light waves-float">Learn More</a>
 </div>
 
@@ -32,7 +37,24 @@ A look back at the <a href="https://uc2023.qgis.nl/">QGIS User Conference 2023</
 
 </p>
 
+<!-- magic! -->
+<style>
+    .myanchor {
+    display: block;
+    height: 50px;
+    margin-top: -50px;
+    visibility: hidden;
+}
+</style>
+</div></div>
+
+<span class="myanchor" id="call-for-papers"></span>
+
 <h3>Call for Papers</h3>
+
+<div class="row">
+    <div class="col-lg-9">
+
 <p>
     We will be collecting submissions for presentations and workshops <b>until the end of March 2024</b>. The call for papers will be announced soon - stay tuned!
 </p>
@@ -40,14 +62,15 @@ A look back at the <a href="https://uc2023.qgis.nl/">QGIS User Conference 2023</
     Please apply to become a speaker if you have anything to share!
 </p>
 
+</div></div>
+
+<span class="myanchor" id="tickets"></span>
+
 <h3>Tickets</h3>
 <p>
     Registration for the event will start in <b>April 2024</b>.
 </p>
 
-
-    <!--
-    -->
 
     </div>
 </section>
