--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,38 @@
 		<div class="logo logo-footer logo-gray pull-right"></div>
 	</div>
 	<div class="row">
+		<div class="col-md-3">
+			<h5>QGIS User Conference</h5>
+			<ul>
+				<li>9-10 September 2024</li>
+				<li>Faculty of Civil Engineering STU</li>
+				<li>Bratislava, Slovakia</li>
+			</ul>
+		</div>
+		<!--
+		<div class="col-md-4">
+			<h5>Follow us</h5>
+			<ul>
+				<li></li>
+			</ul>
+		</div>-->
+		<div class="col-md-3">
+			<h5>Contact Us</h5>
+			<ul>
+				<li><a href="mailto:uc2024@qgis.sk">uc2024@qgis.sk</a></li>
+				<li>OZ QGIS Slovensko</li>
+				<li></li>
+			</ul>
+		</div>
+		<div class="col-md-3">
+			<h5>Links</h5>
+			<ul>
+				<li><a href="https://github.com/qgis/QGIS/wiki/27th%E2%80%90Contributor%E2%80%90Meeting%E2%80%90in%E2%80%90Bratislava">Contributor Meeting</a></li>
+				<li><a href="https://uc2023.qgis.nl/">QGIS UC 2023</a></li>
+				<li><a href="https://qgis.org/">QGIS project</a></li>
+			</ul>
+		</div>
+		<!--
 		{% for block in site.footerBlocks %}
         {% assign colWidth = 12 | divided_by: forloop.length %}
 		<div class="col-md-{{ colWidth }} col-xs-6">
@@ -18,6 +50,7 @@
 			</ul>
 		</div>
 		{% endfor %}
+		-->
 	</div>
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
@@ -38,7 +71,6 @@
 		<!-- Please don't delete this line-->
 		<div class="">
 			<p class="copyright">
-				&copy; QGIS User Conference 2024 Bratislava &middot;
 				Web based on <a href="https://github.com/gdg-x/zeppelin" target="_blank">Project Zeppelin</a>
 				 by <a href="https://github.com/ozasadnyy" target="_blank">Oleh Zasadnyy</a> &middot;
 				 Hero image by <a href="https://commons.wikimedia.org/wiki/File:Bratislava_Panorama_R01.jpg">Marc Ryckaert</a>
