--- a/_sass/partials/_navigation.scss
+++ b/_sass/partials/_navigation.scss
@@ -7,7 +7,7 @@ $nav-scroll-color-hover: rgba(0, 0, 0, 0.8);
   position: fixed;
   z-index: 500;
   width: 100%;
-  padding: 0 10px 10px 10px;
+  padding: 5px 10px 5px 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(255, 255, 255, 0.15);
   .overlay {
     opacity: 1;
@@ -16,7 +16,7 @@ $nav-scroll-color-hover: rgba(0, 0, 0, 0.8);
 }
 .logo-header {
   display: block;
-  transform: translateY(20px);
+  transform: translateY(16px);
   transition: $base-transition;
   padding-left: 30px;
   transform: translateY(1px);
@@ -25,9 +25,10 @@ $nav-scroll-color-hover: rgba(0, 0, 0, 0.8);
   }
   .logo {
     float: left;
-    height: 60px;
+    height: 50px;
     margin-right: 20px;
     vertical-align: middle;
+    padding: 2px;
   }
 }
 .logo-navbar {
@@ -69,7 +70,7 @@ nav {
       transform: translateY(0);
     }
     .top-header & {
-      transform: translateY(20px);
+      transform: translateY(16px);
       @media (max-width: 767px) {
         transform: translateY(0);
       }
