add analytics using clicky

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,7 @@
 
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
 
+    <script async data-id="101442282" src="//static.getclicky.com/js"></script>
 
     <meta name="theme-color" content="#2b5797">
 
