Added call for papers and call for sponsors

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -16,7 +16,7 @@
 
         <h3>Sponsors</h3>
         <div class="">
-            We are looking for sponsors - please get in touch if you are interested in sponsoring the event!
+            We are looking for sponsors - please get check out the <a href="{% link _pages/sponsors.md %}">Sponsors page</a> if you are interested in sponsoring the event!
         </div>
     </div>
 </section>
