Add ESA and Lutra as sponsors

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -14,9 +14,8 @@
         </ul>
         {% endfor %}
 
-        <h3>Sponsors</h3>
         <div class="">
-            We are looking for sponsors - please get check out the <a href="{% link _pages/sponsors.md %}">Sponsors page</a> if you are interested in sponsoring the event!
+            Please get check out the <a href="{% link _pages/sponsors.md %}">Sponsors page</a> if you are interested in sponsoring the event!
         </div>
     </div>
 </section>
