--- a/_includes/about.html
+++ b/_includes/about.html
@@ -51,9 +51,26 @@ A look back at the <a href="https://uc2023.qgis.nl/">QGIS User Conference 2023</
 <span class="myanchor" id="tickets"></span>
 
 <h3>Tickets</h3>
+
+
+<div class="row">
+<div class="col-lg-9">
+
 <p>
-    Registration for the event will start in <b>April 2024</b>.
+Tickets grant access to all conference sections, coffee breaks, lunch and the social event.
+<br/>
+Accommodation is NOT included in the ticket price.
+<br/>
+The prices below are final and inclusive of VAT (there are no extra charges).
 </p>
+
+
+<p>
+<tito-widget event="qgis-slovensko/qgis-user-conference-2024"></tito-widget>
+</p>
+
+</div>
+</div>
 
 
     </div>
