Add info about attending

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -62,6 +62,8 @@ Tickets grant access to all conference sections, coffee breaks, lunch and the so
 Accommodation is NOT included in the ticket price.
 <br/>
 The prices below are final and inclusive of VAT (there are no extra charges).
+<br/>
+Students enrolled to full-time university studies are entitled to discounted tickets for 99 EUR - please contact us if you are a student (we will need a proof of your enrollment).
 </p>
 
 
