added WhereGroup as bronze sponsor

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -7,7 +7,7 @@
             {% for element in partner.elements %}
             <li>
                 <a href="{{ element.link }}" target="_blank">
-                    <img src="{{ site.baseurl }}/img/partners/{{ element.imageUrl }}" title="{{ element.description }}" alt="{{ element.name }}" height="{{ partner.height }}">
+                    <img src="{{ site.baseurl }}/img/partners/{{ element.imageUrl }}" title="{{ element.description }}" alt="{{ element.name }}" height="{% if element.height %}{{ element.height }}{% else %}{{ partner.height }}{% endif %}">
                 </a>
             </li>
             {% endfor %}
