--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,38 @@
 <!-- About Section -->
 <section id="about" class="about">
     <div class="container">
+    
+    
+
+<div class="row">
+		<div class="col-lg-9">
+			<h3>Confirmed Speakers</h3>
+			{% for speaker in site.data.speakers %}
+
+			<div class="col-md-4 col-xs-6 rockstar-speakers-item">
+			  <div class="rockstar-speaker" style="padding-top:20px;padding-bottom:30px;">
+			    <div class="flow-img img-circle rockstar-speaker-img" style="background-image: url({{ site.baseurl | append: '/img/speakers/' | append: speaker.thumbnailUrl }})">
+			    </div>
+			    <div style="font-size: 20px; font-weight: 600; line-height: 1.1; margin: 10px 0 2px; text-align: center;">{{ speaker.name }} {{ speaker.surname }}</div>
+			    <div class="sub">{{ speaker.company }}</div>
+			  </div>
+			</div>
+			{% endfor %}
+			
+			<div class="clearfix"></div>
+
+			<div align="center">
+			<br/>
+			  ... and over 40 more speakers from QGIS community!<br/><br/>
+            </div>
+
+			<div align="center">
+              <a href="{% link _pages/schedule.html %}" class="btn btn-primary waves-effect waves-button waves-light waves-float">See confirmed talks and workshops</a>
+           </div>
+		</div>
+</div>
+
+    
         <h3>About QGIS User Conference</h3>
 
             <div class="row">
@@ -47,6 +79,7 @@ A look back at the <a href="https://uc2023.qgis.nl/">QGIS User Conference 2023</
 }
 </style>
 </div></div>
+
 
 <span class="myanchor" id="tickets"></span>
 
