--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -14,7 +14,7 @@
                 <p>{{ site.eventDate }}</p>
                 <p>Bratislava, Slovakia</p>
                 {% for button in site.heroButtons %}
-                <a href="{% if button.permalink != null %} {{ button.permalink | prepend: site.baseurl }} {% else %} {{ button.link }} {% endif %}" class="btn btn-primary waves-effect waves-button waves-light waves-float" {% if button.link != null %}target="_blank"{% endif %}>{{ button.text }}</a>
+                <a href="{% if button.permalink != null %} {{ button.permalink | prepend: site.baseurl }} {% else %} {{ button.link }} {% endif %}" class="btn-primary waves-effect waves-light" {% if button.link != null %}target="_blank"{% endif %} style="padding-left: 30px; border-radius: 5px; padding-right: 30px; padding-top: 10px; padding-bottom: 10px; margin-top: 20px;">{{ button.text }}</a>
                 {% endfor %}
             </div>
         </div>
