Add initial version of detailed + Alexandra in the team

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -27,7 +27,9 @@
             </div>
 
 			<div align="center">
-              <a href="{% link _pages/schedule.html %}" class="btn btn-primary waves-effect waves-button waves-light waves-float">See confirmed talks and workshops</a>
+              <a href="{% link _pages/schedule.html %}" class="btn btn-primary waves-effect waves-button waves-light waves-float">Schedule Outline</a>
+              &nbsp;&nbsp;&nbsp;
+              <a href="{% link _pages/schedule-detailed.html %}" class="btn btn-primary waves-effect waves-button waves-light waves-float">Detailed Schedule</a>
            </div>
 		</div>
 </div>
