Add note the tickets are sold out

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -91,6 +91,7 @@ A look back at the <a href="https://uc2023.qgis.nl/">QGIS User Conference 2023</
 <div class="row">
 <div class="col-lg-9">
 
+<!--
 <p>
 Tickets grant access to all conference sections, coffee breaks, lunch and the social event.
 <br/>
@@ -99,12 +100,27 @@ Accommodation is NOT included in the ticket price.
 The prices below are final and inclusive of VAT (there are no extra charges).
 <br/>
 Students enrolled to full-time university studies are entitled to discounted tickets for 99 EUR - please contact us if you are a student (we will need a proof of your enrollment).
+-->
 </p>
 
+<p>
+<b>
+We're thrilled that the conference has generated so much excitement! We've reached the venue's capacity of 230 attendees, so registration is now closed.
+</b>
+</p><p>
+<b>
+While we can't accommodate everyone, we truly appreciate your interest and wish we could welcome all of you.
+</b>
+</p><p>
+We've also closed the waiting list for now. However, if any spots become available due to cancellations, we'll reach out to those who signed up first.
+</p>
+</b>
 
+<!--
 <p>
 <tito-widget event="qgis-slovensko/qgis-user-conference-2024"></tito-widget>
 </p>
+-->
 
 </div>
 </div>
