added conference swag

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -34,7 +34,26 @@
 		</div>
 </div>
 
-    
+
+</p>
+
+        <h3>Conference Swag</h3>
+
+            <div class="row">
+                <div class="col-lg-9">
+                    <p>
+                    <table width="100%">
+                    <tr><td>
+                    <img src="{{ site.baseurl }}/img/qgis-uc/t-shirt-uc2024.jpg" width="200">
+                    </td><td>
+We are committed to reducing our environmental impact, which is why we won't be handing out free T-shirts. We know lots of folks love conference merch, so don't worry, you can still attend the conference in style! Check out the official QGIS online shop for the conference T-shirts, hoodies and mugs. Order now to ensure your gear arrives before the conference.<br/><br/>
+<a href="https://qgis.myspreadshop.net/all" class="btn btn-primary waves-effect waves-button waves-light waves-float">Go to the shop</a>
+</td></tr></table>
+</p>
+</div>
+</div>
+
+
         <h3>About QGIS User Conference</h3>
 
             <div class="row">
